[package]
name = "tests_macros"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
biome_string_case = { workspace = true }
case = { workspace = true }
globwalk = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-error = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
