[package]
name = "workspace"
version = "0.1.0"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
air_r_formatter = { workspace = true }
biome_formatter = { workspace = true, features = ["serde"] }
fs = { workspace = true }
ignore = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
ruff_source_file = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
