[package]
name = "workspace"
version = "0.1.0"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
schemars = ["dep:schemars", "settings/schemars"]

[dependencies]
air_r_formatter = { workspace = true }
air_r_parser = { workspace = true }
anyhow = { workspace = true }
biome_formatter = { workspace = true, features = ["serde"] }
biome_parser = { workspace = true }
colored = { workspace = true }
fs = { workspace = true }
ignore = { workspace = true }
itertools = { workspace = true }
line_ending = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
settings = { workspace = true, features = ["serde"] }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
