[package]
name = "xtask_codegen"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
biome_string_case = { workspace = true }
biome_ungrammar = { workspace = true }
bpaf = { version = "0.9.15", features = ["derive"] }
git2 = { version = "0.19.0", default-features = false }
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote = { workspace = true }
xtask = { version = "0.0", path = "../" }

[lints]
workspace = true
